--- a/BlazorLeaflet/BlazorLeaflet/BlazorLeaflet.csproj
+++ b/BlazorLeaflet/BlazorLeaflet/BlazorLeaflet.csproj
@@ -15,6 +15,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression></PackageLicenseExpression>
     <LangVersion>8</LangVersion>
+    <Configurations>Debug;Release;Compound</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-rc1.19457.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-rc1.19457.4" />
+    <PackageReference Include="MudBlazor" Version="6.0.15" />
   </ItemGroup>
 
 </Project>
