--- a/BlazorLeaflet/BlazorLeaflet/BlazorLeaflet.csproj
+++ b/BlazorLeaflet/BlazorLeaflet/BlazorLeaflet.csproj
@@ -24,9 +24,17 @@
 
 
   <ItemGroup>
+    <PackageReference Include="GeoJSON.Net" Version="1.2.22-rc" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0-rc1.19457.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-rc1.19457.4" />
     <PackageReference Include="MudBlazor" Version="6.0.15" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Content Update="wwwroot\leafletBlazorInterops.js">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
